--- a/style.css
+++ b/style.css
@@ -1,9 +1,7 @@
-h1 {
-    color: red;
-}
-h2{
-    background-color: green;
-}
-h3{
-    border: 5px solid blueviolet;
+.Asik {
+    color: white;
+    background-image: url('img/Devloper.jpg');
+    text-align: center;
+    height: 300px;
+    background-position: cover;
 }
